# Multi_Agent_2Dframe

./: .gitignore  MultiAgent_Architecture_Report.docx  MultiAgent_Architecture_Report_EN.docx  PYTHON_CHECK_AGENT.md  README.md  SCHEMA.md  example_input.json  pyproject.toml
docs/: architecture_multiagent.drawio  architecture_rl.drawio
presets/: few_shot_examples.json  q_values.json
reports/: benchmark_baseline_2026-05-13.md  prompt_story_height_comparison.md
scripts/: generate_report.py  generate_report_en.py
src/multiagent/: benchmark.py  config.py  main.py  pipeline.py  rag_context.py  schemas.py  state.py  utils.py  webapp.py
src/multiagent/agents/: base.py  complete_code_generator.py  construction_planning.py  element_agent.py  geometry_code_translator.py  load_assignment.py  node_agent.py  problem_analysis.py  python_check_agent.py
src/multiagent/functions/: __init__.py  connectivity_mapping.py  execution_diagnostics.py  json_compiler.py  schema_normalizer.py
src/multiagent/llm/: __init__.py  client.py
src/multiagent/prompts/: complete_code_generator.txt  construction_planning.txt  element_agent.txt  geometry_code_translator.txt  load_assignment.txt  node_agent.txt  problem_analysis.txt  python_check_agent.txt
src/multiagent/rl/: __init__.py  agent_reward.py  experience_buffer.py  logger.py  policy.py  prompt_optimizer.py  repair.py  reward.py
src/multiagent/validators/: checkpoints.py
src/multiagent/web/: app.css  (+2 more)
tests/: test_benchmark_generation.py  test_pipeline_parallel_geometry.py  test_rl_per_agent.py  test_schema_compatibility.py
(+29 files in other folders)
