[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-structural-scaffold"
version = "0.1.0"
description = "Scaffold for a PDF-inspired multi-agent structural modeling pipeline"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multiagent = ["web/*"]
